--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>GrapixBite: Contact</title>
+    <title>GrapixBite: Service</title>
 
     <meta name="robots" content="index, follow" />
     <meta name="description" content="Creative Agency focused on Designing, Branding, Packaging & UI/UX catering to businesses of all sizes, globally.">
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-    <!-- Header area -->
+
     <!-- start header Arae -->
     <header class="header-area formobile-menu header--transparent default-color">
         <div class="header-wrapper" id="header-wrapper">
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <ul class="mainmenu">
-                <li >
+                <li>
                     <a href="https://www.grapixbite.com/">Home</a>
 
                 </li>
@@ -104,173 +104,126 @@
         </div>
     </div>
     <!-- End Popup Menu Area  -->
-    <!-- Header area End -->
 
-
-    <!-- Bread Crumb Area -->
-    <div class="rn-page-title-area pt--120 pb--190 bg_image bg_image--15" data-black-overlay="6">
+    <!-- Breadcramb Area -->
+    <div class="breadcrumb-area rn-bg-color ptb--120 bg_image bg_image--1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="rn-page-title text-center pt--100">
-                        <h2 class="title theme-gradient">Contact <small>With Us</small></h2>
-                        <p>We're here to help you grow your audience.</p>
+                    <div class="breadcrumb-inner pt--100">
+                        <h2 class="title">Service</h2>
+                        <ul class="page-list">
+                            <li class="rn-breadcrumb-item"><a href="https://www.grapixbite.com/">Home</a></li>
+                            <li class="rn-breadcrumb-item active">Service</li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Bread Crumb  End -->
+    <!-- Breadcramb Area End -->
 
-    <!-- adderss -->
-    <div class="rn-contact-top-area ptb--120 bg_color--5">
+
+    <!-- Start Services Area -->
+    <div class="service-area ptb--120 bg_color--5">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="section-title mb--30 text-center"><span class="subtitle">Our contact address</span>
-                        <h2 class="title">Quick Contact Address</h2>
-                        <p class="description">Please get in touch and our expert suppport team will answer all your questions.</p>
+                    <div class="section-title text-center mb--30"><span class="subtitle">Our Creatity</span>
+                        <h2>Creative Agency</h2>
+                        <p>We offer creative services to <b>grow your brand</b>.</p>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                    <div class="rn-address">
-                        <div class="icon">
-                            <i data-feather="headphones"></i>
+            <div class="row service-main-wrapper">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+                    <a href="service-details">
+                        <div class="service service__style--2 text-left bg-gray">
+                            <div class="icon">
+                                <i data-feather="cast"></i>
+                            </div>
+                            <div class="content">
+                                <h3 class="title">Branding</h3>
+                                <p>We create & transform brands so businesses grow.</p>
+                            </div>
                         </div>
-                        <div class="inner">
-                            <h4 class="title">Contact Phone Number</h4>
-                            <p><a href="tel:+444555666777">+91 89727 22316</a></p>
-
-                        </div>
-                    </div>
+                    </a>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                    <div class="rn-address">
-                        <div class="icon">
-                            <i data-feather="mail"></i>
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+                    <a href="service-details">
+                        <div class="service service__style--2 text-left bg-gray">
+                            <div class="icon">
+                                <i data-feather="layers"></i>
+                            </div>
+                            <div class="content">
+                                <h3 class="title">Logo Design</h3>
+                                <p>Create A Unique Logo For Your Brand With us.
+                                </p>
+                            </div>
                         </div>
-                        <div class="inner">
-                            <h4 class="title">Our Email Address</h4>
-                            <p><a href="mailto:contact@grapixbite.com">contact@grapixbite.com</a></p>
-
-                        </div>
-                    </div>
+                    </a>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6 col-12">
-                    <div class="rn-address">
-                        <div class="icon">
-                            <i data-feather="map-pin"></i>
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+                    <a href="service-details">
+                        <div class="service service__style--2 text-left bg-gray">
+                            <div class="icon">
+                                <i data-feather="users"></i>
+                            </div>
+                            <div class="content">
+                                <h3 class="title">Illustrations</h3>
+                                <p>We create digital illustration for you.</p>
+                            </div>
                         </div>
-                        <div class="inner">
-                            <h4 class="title">Our Location</h4>
-                            <p>Patia, Bhubaneswar, Odisha</p>
-                        </div>
-                    </div>
+                    </a>
                 </div>
-            </div>
-        </div>
-    </div>
-    <!-- adderss ENd -->
-
-    <!-- Contact area -->
-    <div class="rn-contact-page ptb--120 bg_color--1">
-        <div class="container">
-            <div class="row row--35 align-items-start">
-                <div class="col-lg-6 order-2 order-lg-1">
-                    <div class="section-title text-left mb--50">
-                        <span class="subtitle">Let's Say Hi</span>
-                        <h2 class="title">Contact With Us.</h2>
-                        <div class="im_address">
-                            <span>Call us directly:</span><a class="link im-hover" href="phone">+91 89727 22316</a>
-                        </div>
-                        <div class="im_address mt--5">
-                            <span>Contact Email:</span><a class="link im-hover" href="email">contact@grapixbite.com</a>
-                        </div>
-                    </div>
-                    <form id="contact-form" method="POST" action="mail.php" class="rwt-dynamic-form row contact-form--1">
-                        <div class="col-lg-12">
-                            <div class="form-group">
-                                <label for="contact-name"></label>
-                                <input name="contact-name" id="contact-name" type="text" placeholder="Your Name">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+                    <a href="service-details">
+                        <div class="service service__style--2 text-left bg-gray">
+                            <div class="icon">
+                                <i data-feather="monitor"></i>
+                            </div>
+                            <div class="content">
+                                <h3 class="title">UI &amp; UX Design</h3>
+                                <p>We create ui ux design for mobile & web application.
+                                </p>
                             </div>
                         </div>
-                        <div class="col-lg-12">
-                            <div class="form-group">
-                                <label for="contact-phone"></label>
-                                <input type="text" name="contact-phone" id="contact-phone" placeholder="Your Phone">
-                            </div>
-                        </div>
-                        <div class="col-lg-12">
-                            <div class="form-group">
-                                <label for="contact-email"></label>
-                                <input name="contact-email" id="contact-email" type="email" placeholder="Your Email">
-                            </div>
-                        </div>
-                        <div class="col-lg-12">
-                            <div class="form-group">
-                                <label for="contact-message"></label>
-                                <textarea name="contact-message" id="contact-message" placeholder="Your Message"></textarea>
-                            </div>
-                        </div>
-                        <div class="col-lg-12">
-                            <div class="form-submit">
-                                <button name="submit" type="submit" id="submit" class="btn-default btn-primary">Submit Now</button>
-                            </div>
-                        </div>
-                    </form>
+                    </a>
                 </div>
-                <div class="col-lg-6 order-1 order-lg-2">
-                    <div class="thumbnail mb_md--30 mb_sm--30">
-                        <img src="assets/images/about/about-121.jpg" alt="grapixbite">
-                    </div>
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+                    <a href="service-details">
+                        <div class="service service__style--2 text-left bg-gray">
+                            <div class="icon">
+                                <i data-feather="monitor"></i>
+                            </div>
+                            <div class="content">
+                                <h3 class="title">Packaging &amp; Label</h3>
+                                <p>We create packaging designs that play a crucial role to boost your sales.
+                                </p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12">
+                    <a href="service-details">
+                        <div class="service service__style--2 text-left bg-gray">
+                            <div class="icon">
+                                <i data-feather="copy"></i>
+                            </div>
+                            <div class="content">
+                                <h3 class="title">Book &amp; Magazine</h3>
+                                <p>We offers the best uniquely designed attractive book/magazine covers.</p>
+                            </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Contact area End -->
-    
-    
-  
-  
+    <!-- End Services Area -->
 
-    <!-- map area -->
-    <div class="rn-contact-map-area position-relative">
-        <div style="height: 650px; width: 100%;">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29926.106996620703!2d85.80673217795866!3d20.351391727614182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a190912b69339ab%3A0xa11e7186a04f1474!2sPatia%2C%20Bhubaneswar%2C%20Odisha!5e0!3m2!1sen!2sin!4v1640178906772!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
-    </div>
-    <!-- map area End -->
 
-    <!-- Rn Brand Area Start -->
-    <!-- <div class="rn-brand-area bg_color--1 ptb--120">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                    <div class="section-title text-center mb--30"><span class="subtitle">Top clients</span>
-                        <h2 class="title">We worked with brands.</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="brand-style-2">
-                        <li><img src="assets/images/brand/brand-011.png" alt="Logo Images"></li>
-                        <li><img src="assets/images/brand/brand-021.png" alt="Logo Images"></li>
-                        <li><img src="assets/images/brand/brand-031.png" alt="Logo Images"></li>
-                        <li><img src="assets/images/brand/brand-051.png" alt="Logo Images"></li>
-                        <li><img src="assets/images/brand/brand-041.png" alt="Logo Images"></li>
-                        <li><img src="assets/images/brand/brand-081.png" alt="Logo Images"></li>
-                        <li><img src="assets/images/brand/brand-061.png" alt="Logo Images"></li>
-                        <li><img src="assets/images/brand/brand-091.png" alt="Logo Images"></li>
-                        <li><img src="assets/images/brand/brand-071.png" alt="Logo Images"></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- Rn Brand Area End -->
+
     <!-- start footer area -->
     <footer class="footer-area footer-style-01 bg_color--6">
         <div class="im-call-to-action-area ptb--70 im-separator">
@@ -307,20 +260,19 @@
                         <div class="footer-link">
                             <h4>Quick Link</h4>
                             <ul class="ft-link">
-                                <li>
-                                    <a href="portfolio">Portfolio</a>
-                                </li>
+                              <li>
+                                  <a href="portfolio">Portfolio</a>
+                              </li>
 
-                                <li>
-                                    <a href="blog">Our Blog</a>
-                                </li>
-                                <li>
-                                    <a href="team">Our Team</a>
-                                </li>
-                                <li>
+                              <li>
+                                  <a href="blog">Our Blog</a>
+                              </li>
+                              <li>
+                                  <a href="team">Our Team</a>
+                              </li>
+                              <li>
                                     <a href="terms-conditions">Terms & Conditions</a>
                                 </li>
-
                             </ul>
                         </div>
                     </div>
@@ -353,10 +305,10 @@
                             </ul>
                             <div class="social-share-inner mt--20">
                                 <ul class="social-share social-style--2 d-flex justify-content-start liststyle">
-                                    <li><a href="https://www.facebook.com/grapixbite/"><i class="fab fa-facebook-f"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/company/grapix-bite"><i class="fab fa-linkedin-in"></i></a></li>
-                                    <li><a href="https://twitter.com/GrapixBite"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="https://www.instagram.com/grapixbite/"><i class="fab fa-instagram"></i></a></li>
+                                  <li><a href="https://www.facebook.com/grapixbite/"><i class="fab fa-facebook-f"></i></a></li>
+                                  <li><a href="https://www.linkedin.com/company/grapix-bite"><i class="fab fa-linkedin-in"></i></a></li>
+                                  <li><a href="https://twitter.com/GrapixBite"><i class="fab fa-twitter"></i></a></li>
+                                  <li><a href="https://www.instagram.com/grapixbite/"><i class="fab fa-instagram"></i></a></li>
                                 </ul>
                             </div>
                         </div>
